# aes-bridge-cpp

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: linux-tests.yml  mac-tests.yml  win-tests.yml
cli/: CMakeLists.txt  cli.cpp
include/: aesbridge.hpp  cbc.hpp  common.hpp  gcm.hpp  legacy.hpp
src/: cbc.cpp  common.cpp  gcm.cpp  legacy.cpp
tests/: CMakeLists.txt  aes_bridge_tests.cpp
